--- a/Web/uto-web/package.json
+++ b/Web/uto-web/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node sammy.js;  serve -s _static -l tcp://0.0.0.0:${PORT:-8080} -n",
     "build": "vite build",
     "lint": "vue-cli-service lint",
-    "dev": "vite"
+    "start": "node sammy.js;  serve -s _static -l tcp://0.0.0.0:${PORT:-8080} -n"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
