--- a/Web/uto-web/package.json
+++ b/Web/uto-web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "vite build --dest _static",
+    "build": "vite build ",
     "lint": "vue-cli-service lint",
     "start": "node sammy.js;  serve -s _static -l tcp://0.0.0.0:${PORT:-8080} -n"
   },
