--- a/Web/uto-web/package.json
+++ b/Web/uto-web/package.json
@@ -13,6 +13,7 @@
     "roboto-fontface": "*",
     "serve": "^14.2.1",
     "vue": "^3.2.13",
+    "vue-pdf": "^4.3.0",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
