--- a/Web/uto-web/package.json
+++ b/Web/uto-web/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "serve": "^14.2.1",
+    "v-video-embed": "^1.0.8",
     "vue": "^3.2.13",
     "vue-pdf": "^4.3.0",
     "vue-router": "^4.0.3",
